--- a/package.json
+++ b/package.json
@@ -2,20 +2,26 @@
   "name": "@kaladan/diba",
   "version": "0.0.1",
   "description": "The UI Components for Kaladan.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "author": "KaladanDev",
+  "license": "MIT",
+  "homepage": "https://github.com/KaladanDev/diba#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/KaladanDev/diba.git"
   },
-  "author": "KaladanDev",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/KaladanDev/diba/issues"
   },
-  "homepage": "https://github.com/KaladanDev/diba#readme",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "rm -rf dist/ && npm run build:esm && npm run build:cjs",
+    "build:esm": "tsc",
+    "build:cjs": "tsc --module CommonJS --outDir dist/cjs"
+  },
   "devDependencies": {
     "@types/node": "^17.0.24",
     "@types/react": "^18.0.5",
